--- a/index.html
+++ b/index.html
@@ -13,47 +13,49 @@
           <header>
              <img id=logoimg src="img/logo.png" alt="logo Gmail">
              <h1 id=titolo>Gmail</h1>
-              <hr>
-           </header>
-          <main>
-             <input type="text" placeholder="Search">
-             <button type="button" name="button">VAI</button>
-             <h1>You have <span id=cerchio>30</span> unread</h1>
              <hr>
-             <div class="box">
-                 <div class="colonna1">
-                     <input type="checkbox">
-                     &starf;
-                     <strong>Oggetto della email</strong>
-                 </div>
-                 <div class="colonna2">
-                     <span>- testo della email...</span>
-                 </div>
-             </div>
-             <div class="box">
-                 <div class="colonna1">
-                     <input type="checkbox">
-                     &starf;
-                     <strong>Oggetto della email</strong>
-                 </div>
-                 <div class="colonna2">
-                     <span>- testo della email...</span>
-                 </div>
-             </div>
-             <div class="box">
-                 <div class="colonna1">
-                     <input type="checkbox">
-                     &starf;
-                     <strong>Oggetto della email</strong>
-                 </div>
-                 <div class="colonna2">
-                     <span>- testo della email...</span>
-                 </div>
-             </div>
+           </header>
+           <section>
+               <input type="text" placeholder="Search">
+               <button type="button" name="button">VAI</button>
+               <h1>You have <span id=cerchio>30</span> unread</h1>
+               <hr>
+           </section>
+          <main>
              <div class="box">
                  <div class="colonna1">
                      <input type="checkbox">
                      &starf; <!--stella-->
+                     <strong>Oggetto della email</strong>
+                 </div>
+                 <div class="colonna2">
+                     <span>- testo della email...</span>
+                 </div>
+             </div>
+             <div class="box">
+                 <div class="colonna1">
+                     <input type="checkbox">
+                     &starf;
+                     <strong>Oggetto della email</strong>
+                 </div>
+                 <div class="colonna2">
+                     <span>- testo della email...</span>
+                 </div>
+             </div>
+             <div class="box-unread">
+                 <div class="colonna1">
+                     <input type="checkbox">
+                     &starf;
+                     <strong>Oggetto della email</strong>
+                 </div>
+                 <div class="colonna2">
+                     <span>- testo della email...</span>
+                 </div>
+             </div>
+             <div class="box">
+                 <div class="colonna1">
+                     <input type="checkbox">
+                     &starf;
                      <strong>Oggetto della email</strong>
                  </div>
                  <div class="colonna2">
